<resources>

    <string name="app_name">Navjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CarSensing</string>
    <string name="title_activity_bluetooth">Select Bluetooth Dongle</string>
    <string name="title_activity_live_data">Live Data</string>
    <string name="todo">TODO</string>
    <string name="measurementDescription">Measurement Description</string>
    <string name="description">Description</string>
    <string name="measurementInterval">Measurement Interval (s)</string>
    <string name="defaultInterval">5</string>
    <string name="startMeasurement">Start Measurement</string>
    <string name="stopMeasurement">Stop Measurement</string>
    <string name="obd">OBD</string>
    <string name="noDevice">(no device)</string>
    <string name="speed">Speed</string>
    <string name="rpm">RPM</string>
    <string name="engineLoad">Engine Load</string>
    <string name="maf">MAF</string>
    <string name="coolantTemp">Cool. Temp.</string>
    <string name="intakeTemp">Intake Temp.</string>
    <string name="locationNetwork">Location/Network</string>
    <string name="location">Location</string>
    <string name="wifiInfo">Wifi Info</string>
    <string name="cellularInfo">Cellular Info</string>
    <string name="sensors">Sensors</string>
    <string name="light">Light</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="batteryLevel">Battery Level</string>
    <string name="batteryTemp">Battery Temp</string>
    <string name="heading">Heading</string>
    <string name="magnetic">Magnetic</string>
    <string name="loudness">Loudness</string>
    <string name="title_activity_kiosk">KioskActivity</string>
    <string name="liveData">OBD Live Data</string>
    <string name="navigation">Navigation</string>
    <string name="dev">development</string>
    <string name="googleservices">Google Services</string>
    <string name="cancel">Cancel</string>
    <string name="buttonok">Okay</string>
    <string name="openSettings">Open Settings</string>
    <string name="messageLocationServices">Location Services needs to be enabled for this application to work correctly. Do you want to open location settings?</string>
	<string name="messagePhoneStationary">It appears the phone is stationary or not connected to the OBD sensor. Do you want to exit the application?</string>
	<string name="messageconnectobddevice">Please choose an OBD device from the list. You need to pair at least one to start</string>
	<string name="valuemeasurementinterval">5</string>
	<string name="messagenodevicepaired">Please pair an OBD device using \'Settings\' menu to access this feature</string>
	<string name="messagemapsnotinstalled">Please install maps application to use this feature</string>
	<string name="messagenodevicesfound">No paired OBD devices found. Please pair the phone to an OBD devices to use this feature</string>
	<string name="messageprogress">Please wait while your device is being configured</string>
</resources>